<resources>
    <string name="app_name">CookieClickerTest</string>
    <string name="reset">Reset</string>
    <string name="shop">Shop</string>
    <string name="save">Save</string>
    <string name="cookie">Cookie</string>
    <string name="cookies">Cookies:</string>
    <string name="_1">1</string>
    <string name="_2500">2500</string>
    <string name="_60">60</string>
    <string name="click_multiplikator">Click Multiplikator</string>
    <string name="_1000">1000</string>
    <string name="auto_clicker">Auto-Clicker</string>
    <string name="back">Back</string>
    <string name="grandma">Grandma</string>
    <string name="bakery">Bakery</string>
    <string name="factory">Factory</string>
    <string name="_0">0</string>
    <string name="billion">Billion</string>
    <string name="settings">Settings</string>
    <string name="aboutUs">.this app was well programmed by two trainees as part of the onboarding week.\nWe hope you can find a few minutes of entertainment with this game.\nThe advertising is only to cover costs\n~ Kai\n~ Kira
    </string>
    <string name="image">Image</string>
    <string name="music_from_https_www_bensound_com">Music from: https://www.bensound.com</string>
    <string name="todo">TODO</string>
</resources>